--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "eject": "react-scripts-kotlin eject",
     "gen-idea-libs": "react-scripts-kotlin gen-idea-libs",
     "get-types": "react-scripts-kotlin get-types --dest=src/types",
-    "postinstall": "npm run gen-idea-libs"
+    "postinstall": "yarn run gen-idea-libs"
   }
 }
