--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "build": "react-scripts-kotlin build",
     "eject": "react-scripts-kotlin eject",
     "gen-idea-libs": "react-scripts-kotlin gen-idea-libs",
-    "get-types": "react-scripts-kotlin get-types --dest=src/types",
-    "postinstall": "yarn run gen-idea-libs"
+    "get-types": "react-scripts-kotlin get-types --dest=src/types"
   }
 }
